Stop overflow causing scroll bars.
Stopped body from overflowing and causing scroll bars.

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -98,6 +98,14 @@ header {
   position: absolute;
 }
 
+html {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 .main {
   display: grid;
   grid-template-columns: 16rem auto;
